moves social media menu to the bottom of the page on smaller screen sizes. fixes safari bug

--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -110,9 +110,18 @@ body {
   border: 1px solid #ea9fd7;
 }
 
+.small-screen-social {
+
+}
+
 @media only screen and (max-width: 992px) {
   .sidey {
     position: static !important;
+    width: 75%;
+  }
+
+  .small-screen-social {
+
   }
 
   .search-container {
@@ -155,5 +164,9 @@ body {
   }
   .main-container {
     padding: 0px;
+  }
+
+  .sidey {
+    width: 100%;
   }
 }
